<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraint_layout_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/login_page_activity_constraint_layout_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/section1_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/login_page_activity_section1_constraint_layout_height"
		android:background="@drawable/login_page_activity_section1_constraint_layout_background"
		app:layout_constraintHorizontal_weight="1"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="0dp">
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/appheadline_constraint_layout"
			android:layout_width="0dp"
			android:layout_height="@dimen/login_page_activity_appheadline_constraint_layout_height"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="0dp">
		
			<View
				android:id="@+id/ellipse1_constraint_layout"
				android:layout_width="@dimen/login_page_activity_ellipse1_constraint_layout_width"
				android:layout_height="@dimen/login_page_activity_ellipse1_constraint_layout_height"
				android:layout_marginStart="@dimen/login_page_activity_ellipse1_constraint_layout_margin_start"
				android:background="#16C6F5"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="12dp"
				tools:layout_editor_absoluteY="29dp"/>
		
			<View
				android:id="@+id/ellipse2_constraint_layout"
				android:layout_width="@dimen/login_page_activity_ellipse2_constraint_layout_width"
				android:layout_height="@dimen/login_page_activity_ellipse2_constraint_layout_height"
				android:layout_marginEnd="@dimen/login_page_activity_ellipse2_constraint_layout_margin_end"
				android:background="#16C6F5"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="340dp"
				tools:layout_editor_absoluteY="29dp"/>
		
			<TextView
				android:id="@+id/apptitle_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/login_page_activity_apptitle_text_view_margin_top"
				android:gravity="start"
				android:text="@string/login_page_activity_apptitle_text_view_text"
				android:textColor="#FFFFFF"
				android:textSize="@dimen/login_page_activity_apptitle_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="23dp"
				tools:layout_editor_absoluteY="17dp"/>
		</android.support.constraint.ConstraintLayout>
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/slideview_constraint_layout"
			android:layout_width="0dp"
			android:layout_height="@dimen/login_page_activity_slideview_constraint_layout_height"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/appheadline_constraint_layout"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="68dp">
		
			<View
				android:id="@+id/ellipse3_constraint_layout"
				android:layout_width="@dimen/login_page_activity_ellipse3_constraint_layout_width"
				android:layout_height="@dimen/login_page_activity_ellipse3_constraint_layout_height"
				android:layout_marginBottom="@dimen/login_page_activity_ellipse3_constraint_layout_margin_bottom"
				android:layout_marginStart="@dimen/login_page_activity_ellipse3_constraint_layout_margin_start"
				android:background="@drawable/login_page_activity_ellipse3_constraint_layout_background"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				tools:layout_editor_absoluteX="23dp"
				tools:layout_editor_absoluteY="371dp"/>
		
			<View
				android:id="@+id/ellipse4_constraint_layout"
				android:layout_width="@dimen/login_page_activity_ellipse4_constraint_layout_width"
				android:layout_height="@dimen/login_page_activity_ellipse4_constraint_layout_height"
				android:layout_marginBottom="@dimen/login_page_activity_ellipse4_constraint_layout_margin_bottom"
				android:layout_marginStart="@dimen/login_page_activity_ellipse4_constraint_layout_margin_start"
				android:background="@drawable/login_page_activity_ellipse4_constraint_layout_background"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toRightOf="@+id/ellipse3_constraint_layout"
				tools:layout_editor_absoluteX="45dp"
				tools:layout_editor_absoluteY="373dp"/>
		
			<View
				android:id="@+id/ellipse5_constraint_layout"
				android:layout_width="@dimen/login_page_activity_ellipse5_constraint_layout_width"
				android:layout_height="@dimen/login_page_activity_ellipse5_constraint_layout_height"
				android:layout_marginBottom="@dimen/login_page_activity_ellipse5_constraint_layout_margin_bottom"
				android:layout_marginStart="@dimen/login_page_activity_ellipse5_constraint_layout_margin_start"
				android:background="@drawable/login_page_activity_ellipse5_constraint_layout_background"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toRightOf="@+id/ellipse4_constraint_layout"
				tools:layout_editor_absoluteX="63dp"
				tools:layout_editor_absoluteY="373dp"/>
		
			<View
				android:id="@+id/ellipse6_constraint_layout"
				android:layout_width="@dimen/login_page_activity_ellipse6_constraint_layout_width"
				android:layout_height="@dimen/login_page_activity_ellipse6_constraint_layout_height"
				android:layout_marginBottom="@dimen/login_page_activity_ellipse6_constraint_layout_margin_bottom"
				android:layout_marginStart="@dimen/login_page_activity_ellipse6_constraint_layout_margin_start"
				android:background="@drawable/login_page_activity_ellipse6_constraint_layout_background"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toRightOf="@+id/ellipse5_constraint_layout"
				tools:layout_editor_absoluteX="81dp"
				tools:layout_editor_absoluteY="373dp"/>
		
			<TextView
				android:id="@+id/label2_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/login_page_activity_label2_text_view_margin_bottom"
				android:layout_marginStart="@dimen/login_page_activity_label2_text_view_margin_start"
				android:fontFamily="@font/font_roboto_bold"
				android:gravity="start"
				android:text="@string/login_page_activity_label2_text_view_text"
				android:textColor="#FFFFFF"
				android:textSize="@dimen/login_page_activity_label2_text_view_text_size"
				app:layout_constraintBottom_toTopOf="@+id/ellipse3_constraint_layout"
				app:layout_constraintLeft_toLeftOf="parent"
				tools:layout_editor_absoluteX="27dp"
				tools:layout_editor_absoluteY="292dp"/>
		
			<ImageView
				android:id="@+id/main_image_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/login_page_activity_main_image_image_view_margin_top"
				android:scaleType="centerCrop"
				android:src="@drawable/main_image"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="50dp"
				tools:layout_editor_absoluteY="39dp"/>
		</android.support.constraint.ConstraintLayout>
	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/section2_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/login_page_activity_section2_constraint_layout_height"
		android:layout_marginEnd="@dimen/login_page_activity_section2_constraint_layout_margin_end"
		android:layout_marginStart="@dimen/login_page_activity_section2_constraint_layout_margin_start"
		android:layout_marginTop="@dimen/login_page_activity_section2_constraint_layout_margin_top"
		app:layout_constraintHorizontal_weight="0.88"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/section1_constraint_layout"
		tools:layout_editor_absoluteX="21dp"
		tools:layout_editor_absoluteY="518dp">
	
		<TextView
			android:id="@+id/label1_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/font_roboto_bold"
			android:gravity="start"
			android:text="@string/login_page_activity_label1_text_view_text"
			android:textColor="#32323B"
			android:textSize="@dimen/login_page_activity_label1_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="0dp"/>
	
		<EditText
			android:id="@+id/textbox_edit_text"
			android:layout_width="0dp"
			android:layout_height="@dimen/login_page_activity_textbox_edit_text_height"
			android:layout_marginTop="@dimen/login_page_activity_textbox_edit_text_margin_top"
			android:background="@drawable/login_page_activity_textbox_edit_text_background"
			android:fontFamily="@font/font_roboto_regular"
			android:gravity="start"
			android:hint="@string/login_page_activity_textbox_edit_text_hint"
			android:inputType="phone"
			android:maxLines="1"
			android:paddingLeft="@dimen/login_page_activity_textbox_edit_text_padding_left"
			android:paddingRight="@dimen/login_page_activity_textbox_edit_text_padding_right"
			android:paddingTop="@dimen/login_page_activity_textbox_edit_text_padding_top"
			android:textColor="@color/login_page_activity_textbox_edit_text_text_color"
			android:textColorHint="@color/color_hint_text"
			android:textSize="@dimen/login_page_activity_textbox_edit_text_text_size"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/label1_text_view"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="35dp"/>
	
		<Button
			android:id="@+id/signin_button"
			android:layout_width="@dimen/login_page_activity_signin_button_width"
			android:layout_height="@dimen/login_page_activity_signin_button_height"
			android:background="?attr/selectableItemBackground"
			android:fontFamily="@font/font_roboto_regular"
			android:gravity="start"
			android:text="@string/login_page_activity_signin_button_text"
			android:textColor="#32323B"
			android:textSize="@dimen/login_page_activity_signin_button_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="116dp"/>
	</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>